Added password columns and has many relationship between students and events

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,6 +7,8 @@
     <%= text_field :student, :name, :class => 'form-control' %>
     <%= label :student, :uni, 'UNI', :class => 'col-form-label' %>
     <%= text_field :student, :uni, :class => 'form-control' %>
+    <%= label :student, :password, 'Password', :class => 'col-form-label' %>
+    <%= text_field :student, :password, :class => 'form-control' %>
     <br/>
     <%= submit_tag 'Login', :class => 'btn btn-primary' %>
 <% end %>
@@ -17,6 +19,8 @@
     <%= text_field :student, :name, :class => 'form-control' %>
     <%= label :student, :uni, 'UNI', :class => 'col-form-label' %>
     <%= text_field :student, :uni, :class => 'form-control' %>
+    <%= label :student, :password, 'Password', :class => 'col-form-label' %>
+    <%= text_field :student, :password, :class => 'form-control' %>
     <br/>
     <%= submit_tag 'Create Account', :class => 'btn btn-primary' %>
 <% end %>
@@ -28,6 +32,8 @@
     <%= text_field :organization, :name, :class => 'form-control' %>
     <%= label :organization, :email, 'Email', :class => 'col-form-label' %>
     <%= text_field :organization, :email, :class => 'form-control' %>
+    <%= label :organization, :password, 'Password', :class => 'col-form-label' %>
+    <%= text_field :organization, :password, :class => 'form-control' %>
     <br/>
     <%= submit_tag 'Login', :class => 'btn btn-primary' %>
 <% end %>
@@ -38,6 +44,8 @@
     <%= text_field :organization, :name, :class => 'form-control' %>
     <%= label :organization, :email, 'Email', :class => 'col-form-label' %>
     <%= text_field :organization, :email, :class => 'form-control' %>
+    <%= label :organization, :password, 'Password', :class => 'col-form-label' %>
+    <%= text_field :organization, :password, :class => 'form-control' %>
     <br/>
-    <%= submit_tag 'Login', :class => 'btn btn-primary' %>
+    <%= submit_tag 'Create Account', :class => 'btn btn-primary' %>
 <% end %>
