--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,14 @@
 <h2>Create New Event</h2>
 
-<%= form_tag 'events#create', :class => 'form' do %>
+<%= form_tag 'organizers#create_event', :class => 'form' do %>
   <%= label :event, :name, 'Name', :class => 'col-form-label' %>
-  <%= text_field :event, :Name, :class => 'form-control' %>
+  <%= text_field :event, :name, :class => 'form-control' %>
+  <%= label :event, :datetime, 'Date and Time', :class => 'col-form-label' %>
+  <%= datetime_select :event, :datetime, :class => 'form-control' %>
+  <%= label :event, :location, 'Location', :class => 'col-form-label' %>
+  <%= text_field :event, :location, :class => 'form-control' %>
+  <%= label :event, :description, 'Description', :class => 'col-form-label' %>
+  <%= text_field :event, :description, :class => 'form-control' %>
   <br/>
   <%= submit_tag 'Save Changes', :class => 'btn btn-primary' %>
 <% end %>
