--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Create New Event</h2>
 
-<%= form_tag 'organizers#create_event', :class => 'form' do %>
+<%= form_tag submit_event_path, :class => 'form' do %>
   <%= label :event, :name, 'Name', :class => 'col-form-label' %>
   <%= text_field :event, :name, :class => 'form-control' %>
   <%= label :event, :datetime, 'Date and Time', :class => 'col-form-label' %>
