--- a/app/views/events/organizer_index.html.erb
+++ b/app/views/events/organizer_index.html.erb
@@ -2,7 +2,7 @@
 <h2>Your Events</h2>
 
 <%#  Part 2: Start here... %>
-<%= link_to "Create an event", create_event_path %>
+<%= link_to "Create an event", new_event_path %>
 
 <table class="table table-striped col-md-12" id="events">
   <thead>
@@ -29,9 +29,9 @@
         <td>
           <%= event.tags %>
         </td>
-        <td>
-          <%= link_to "More about #{event.name}", event_path(event) %>
-        </td>
+        <%# <td>
+          <%= link_to "More about #{event.name}", events_path(event) %>
+        <%# </td> %>
       </tr>
     <% end %>
   </tbody>
