implemented edit, delete, and logout button

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,12 +1,18 @@
-<h2>Edit Existing Movie</h2>
-<%= form_tag movie_path(@movie), :method => :put do %>
-  <%= label :movie, :title, 'Title', :class => 'col-form-label' %>
-  <%= text_field :movie, 'title', :class => 'form-control' %>
-  <%= label :movie, :rating, 'Rating', :class => 'col-form-label'  %>
-  <%= select :movie, :rating, ['G','PG','PG-13','R','NC-17'], {}, {:class => 'form-control col-1'} %>
-  <%= label :movie, :release_date, 'Released On', :class => 'col-form-label'  %>
-  <%= date_select :movie, :release_date, {}, :class => 'form-control col-2 d-inline' %>
+<%= link_to "Logout", organization_logout_path %>
+
+<h2>Edit Existing Event</h2>
+<%= form_tag event_path(@event), :method => :put do %>
+  <%= label :event, :name, 'Name', :class => 'col-form-label' %>
+  <%= text_field :event, 'name', :class => 'form-control' %>
+  <%= label :event, :datetime, 'Date and Time', :class => 'col-form-label' %>
+  <%= datetime_select :event, :datetime, class: 'form-control col-2 d-inline' %>
+  <%= label :event, :location, 'Location', :class => 'col-form-label' %>
+  <%= text_field :event, 'location', :class => 'form-control' %>
+  <%= label :event, :tags, 'Tags', :class => 'col-form-label' %>
+  <%= text_field :event, 'tags', :class => 'form-control' %>
+  <%= label :event, :description, 'Description', :class => 'col-form-label' %>
+  <%= text_field :event, :description, :class => 'form-control' %>
   <br/>
-  <%= submit_tag 'Update Movie Info', :class => 'btn btn-primary' %>
-  <%= link_to 'Cancel', movies_path, :class => 'btn btn-secondary' %>
+  <%= submit_tag 'Update Event Info', :class => 'btn btn-primary' %>
+  <%= link_to 'Cancel', organizer_events_path('organizer_id': Organizer.find_by(id: session[:organizer_id]).id), :class => 'btn btn-secondary' %>
 <% end %>
