--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,24 +1,30 @@
 <!--  app/views/events/show.html.erb -->
-<h2>Details about <em><%= @movie.title %></em></h2>
+<%= link_to "Logout", organization_logout_path %>
+
+<h2>Details about <em><%= @event.name %></em></h2>
 
 <ul id="details">
   <li>
-    Rating:
-    <%= @movie.rating %>
+    Date and Time:
+    <%= @event.datetime.strftime("%I:%M %p on %m/%d/%Y") %>
   </li>
   <li>
-    Released on:
-    <%= @movie.release_date.strftime("%B %d, %Y") %>
+    Location:
+    <%= @event.location %>
+  </li>
+  <li>
+    Tags:
+    <%= @event.tags %>
   </li>
 </ul>
 
 <h3>Description:</h3>
 <p id="description">
-  <%= @movie.description %>
+  <%= @event.description %>
 </p>
 
 <div class="row">
-  <%= link_to 'Edit', edit_movie_path(@movie), :class => 'btn btn-primary col-2' %>
-  <%= link_to 'Delete', movie_path(@movie), 'data-method' => 'delete', 'data-confirm' => 'Are you sure?', :class => 'btn btn-danger col-2' %>
-  <%= link_to 'Back to movie list', movies_path, :class => 'btn btn-primary col-2' %>
+  <%= link_to 'Edit', edit_event_path(@event), :class => 'btn btn-primary col-2' %>
+  <%= link_to 'Delete', event_path(@event), 'data-method' => 'delete', 'data-confirm' => 'Are you sure?', :class => 'btn btn-danger col-2' %>
+  <%= link_to 'Back to event list', organizer_events_path('organizer_id': Organizer.find_by(id: session[:organizer_id]).id), :class => 'btn btn-primary col-2' %>
 </div>
