Resolved further merge conflicts

--- a/app/views/students/my_events.html.erb
+++ b/app/views/students/my_events.html.erb
@@ -32,6 +32,6 @@
   </tbody>
 </table>
 
-<%= button_to "Back to All Events", events_path, method: :get , :class => 'btn btn-outline-primary%>
+<%= button_to "Back to All Events", events_path, method: :get , :class => 'btn btn-outline-primary'%>
 <p></p>
 <%= button_to "Log Out", root_path, method: :get , :class => 'btn btn-outline-secondary'%>
