--- a/app/views/events/student_show.html.erb
+++ b/app/views/events/student_show.html.erb
@@ -23,8 +23,7 @@
   <%= @event.description %>
 </p>
 
-<div class="row">
-  <%= link_to 'Edit', edit_event_path(@event), :class => 'btn btn-primary col-2' %>
-  <%= link_to 'Delete', event_path(@event), 'data-method' => 'delete', 'data-confirm' => 'Are you sure?', :class => 'btn btn-danger col-2' %>
-  <%= link_to 'Back to event list', organizer_events_path('organizer_id': Organizer.find_by(id: session[:organizer_id]).id), :class => 'btn btn-primary col-2' %>
-</div>
+<h3> Add to your list? </h3>
+<%= link_to 'Add', add_event_path(@event.id), :class => 'btn btn-outline-success btn-sml' %>
+<p> </p>
+<%= button_to "Back to All Events", events_path, method: :get , :class => 'btn btn-primary'%>
