--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,16 @@
 <!--  app/views/events/show.html.erb -->
-<%= link_to "Logout", organization_logout_path %>
+<%= link_to "Logout", organization_logout_path, 'data-method' => 'post' %>
 
 <h2>Details about <em><%= @event.name %></em></h2>
 
 <ul id="details">
   <li>
     Date and Time:
-    <%= @event.datetime.strftime("%I:%M %p on %m/%d/%Y") %>
+    <% if @event.datetime != nil %>
+            <%= @event.datetime.strftime("%I:%M %p on %m/%d/%Y") %>
+            <% else %>
+            <%= @event.datetime %>
+            <% end %>
   </li>
   <li>
     Location:
