--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,18 +1,47 @@
-<%= link_to "Logout", organization_logout_path %>
+<div class="md:grid md:grid-cols-3 md:gap-6">
+  <div class="mt-5 md:col-span-1">
+    <div class="px-4 sm:px-0">
+      <h3 class="text-lg font-medium leading-6 text-gray-900">Edit Existing Event</h3>
+      <p class="mt-1 text-sm text-gray-600">Edit your event, then click update to save, or cancel to go back.</p>
+    </div>
+  </div>
+  <div class="mt-5 md:col-span-2 md:mt-0">
+    <%= form_tag events_path, :class => 'form' do %>
+      <div class="overflow-hidden shadow sm:rounded-md">
+        <div class="bg-white px-4 py-5 sm:p-6">
+          <div class="grid grid-cols-6 gap-6">
+            <div class="col-span-6 sm:col-span-3">
+              <%= label :event, :name, 'Name', :class => 'block text-sm font-medium text-gray-700' %>
+              <%= text_field :event, :name, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            </div>
 
-<h2>Edit Existing Event</h2>
-<%= form_tag event_path(@event), :method => :put do %>
-  <%= label :event, :name, 'Name', :class => 'col-form-label' %>
-  <%= text_field :event, 'name', :class => 'form-control' %>
-  <%= label :event, :datetime, 'Date and Time', :class => 'col-form-label' %>
-  <%= datetime_select :event, :datetime, class: 'form-control col-2 d-inline' %>
-  <%= label :event, :location, 'Location', :class => 'col-form-label' %>
-  <%= text_field :event, 'location', :class => 'form-control' %>
-  <%= label :event, :tags, 'Tags', :class => 'col-form-label' %>
-  <%= text_field :event, 'tags', :class => 'form-control' %>
-  <%= label :event, :description, 'Description', :class => 'col-form-label' %>
-  <%= text_field :event, :description, :class => 'form-control' %>
-  <br/>
-  <%= submit_tag 'Update Event Info', :class => 'btn btn-primary' %>
-  <%= link_to 'Cancel', organizer_events_path('organizer_id': Organizer.find_by(id: session[:organizer_id]).id), :class => 'btn btn-secondary' %>
-<% end %>
+            <div class="col-span-6 sm:col-span-3">
+              <%= label :event, :datetime, 'Date and Time', :class => 'block text-sm font-medium text-gray-700' %>
+              <%= datetime_select :event, :datetime, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            </div>
+
+            <div class="col-span-6 sm:col-span-4">
+              <%= label :event, :location, 'Location', :class => 'block text-sm font-medium text-gray-700' %>
+              <%= text_field :event, :location, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            </div>
+
+            <div class="col-span-6 sm:col-span-3">
+              <%= label :event, :tags, 'Tags', :class => 'block text-sm font-medium text-gray-700' %>
+              <%= text_field :event, 'tags', :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            </div>
+
+            <div class="col-span-6">
+              <%= label :event, :description, 'Description', :class => 'block text-sm font-medium text-gray-700' %>
+              <%= text_field :event, :description, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm' %>
+            </div>
+          </div>
+        </div>
+        <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+          <%= submit_tag 'Update Event Info', :class => 'inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2' %>
+          <%= link_to 'Cancel', organizer_events_path('organizer_id': Organizer.find_by(id: session[:organizer_id]).id), :class => 'inline-flex justify-center rounded-md border border-transparent bg-red-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+<%= link_to "Logout", organization_logout_path, :class => "text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-6 mr-2 mb-4 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"%>
