--- a/app/views/events/organizer_index.html.erb
+++ b/app/views/events/organizer_index.html.erb
@@ -1,45 +1,43 @@
 <!--  This file is app/views/events/organizer_index.html.erb -->
 
-<%= link_to "Logout", organization_logout_path, 'data-method' => 'post' %>
+<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Your Events</h2>
 
-<h2>Your Events</h2>
-
-<%#  Part 2: Start here... %>
-<%= link_to 'Create an event', new_event_path, class: "btn btn-primary" %>
-
-<table class="table table-striped col-md-12" id="events">
-  <thead>
-    <tr>
-      <th>Event Name</th>
-      <th>Date and Time</th>
-      <th>Location</th>
-      <th>Tags</th>
-      <th>More Info</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
+<div class="mt-2 overflow-x-auto relative shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400" id="events">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <td>
-          <%= event.name %>
-        </td>
-        <td>
-          <% if event.datetime != nil %>
-            <%= event.datetime.strftime("%I:%M %p on %m/%d/%Y") %>
-            <% else %>
-            <%= event.datetime %>
-            <% end %>
-        </td>
-        <td>
-          <%= event.location %>
-        </td>
-        <td>
-          <%= event.tags %>
-        </td>
-        <td>
-          <%= link_to "More about #{event.name}", event_path(event) %>
-        </td>
+        <th scope="col" class="py-3 px-6">Event Name</th>
+        <th scope="col" class="py-3 px-6">Date and Time</th>
+        <th scope="col" class="py-3 px-6">Location</th>
+        <th scope="col" class="py-3 px-6">Tags</th>
+        <th scope="col" class="py-3 px-6">More Info</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+            <%= event.name %>
+          </th>
+          <td class="py-4 px-6">
+            <%= event.datetime %>
+          </td>
+          <td class="py-4 px-6">
+            <%= event.location %>
+          </td>
+          <td class="py-4 px-6">
+            <%= event.tags %>
+          </td>
+          <td class="py-4 px-6">
+            <%= link_to "More about #{event.name}", edit_event_path(event), :class => 'font-medium text-blue-600 dark:text-blue-500 hover:underline' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div class="mt-3 inline-flex">
+  <%= link_to "Create an event", new_event_path, class: "focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" %>
+  <%= link_to "Logout", organization_logout_path, 'data-method' => 'post', :class => "text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900" %>
+</div>
