--- a/app/views/events/student_index.html.erb
+++ b/app/views/events/student_index.html.erb
@@ -1,36 +1,38 @@
-<!--  This file is app/views/events/organizer_index.html.erb -->
-<h2>Your Events</h2>
+<!--  This file is app/views/events/student_index.html.erb -->
+<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Your Events</h2>
 
-<%#  Part 2: Start here... %>
-
-<table class="table table-striped col-md-12" id="events">
-  <thead>
-    <tr>
-      <th>Event Name</th>
-      <th>Date and Time</th>
-      <th>Location</th>
-      <th>Remove from List</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
+<div class="mt-2 overflow-x-auto relative shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400" id="events">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <td>
-          <%= event.name %>
-        </td>
-        <td>
-          <%= event.datetime %>
-        </td>
-        <td>
-          <%= event.location %>
-        </td>
-        <td>
-          <%= event.tags %>
-        </td>
-        <%# <td>
-          <%= link_to "More about #{event.name}", events_path(event) %>
-        <%# </td> %>
+        <th scope="col" class="py-3 px-6">Event Name</th>
+        <th scope="col" class="py-3 px-6">Date and Time</th>
+        <th scope="col" class="py-3 px-6">Location</th>
+        <th scope="col" class="py-3 px-6">Tags</th>
+        <th scope="col" class="py-3 px-6">More Info</th>
       </tr>
-    <% end %>
-  </tbody>
+    </thead>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+            <%= event.name %>
+          </th>
+          <td class="py-4 px-6">
+            <%= event.datetime %>
+          </td>
+          <td class="py-4 px-6">
+            <%= event.location %>
+          </td>
+          <td class="py-4 px-6">
+            <%= event.tags %>
+          </td>
+          <td class="py-4 px-6">
+            <%= link_to "More about #{event.name}", about_event_path(event), :class => 'font-medium text-blue-600 dark:text-blue-500 hover:underline' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 </table>
