--- a/app/views/students/my_events.html.erb
+++ b/app/views/students/my_events.html.erb
@@ -1,37 +1,38 @@
 <!--  This file is app/views/events/organizer_index.html.erb -->
-<h2>Your Events</h2>
+<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Your Events</h2>
 
-<%#  Part 2: Start here... %>
-
-<table class="table table-striped col-md-12" id="events">
-  <thead>
-    <tr>
-      <th>Event Name</th>
-      <th>Date and Time</th>
-      <th>Location</th>
-      <th>Remove from List</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
+<div class="mt-2 overflow-x-auto relative shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400" id="events">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <td>
-          <%= event.name %>
-        </td>
-        <td>
-          <%= event.datetime %>
-        </td>
-        <td>
-          <%= event.location %>
-        </td>
-        <td>
-        <%= button_to "Remove", remove_event_path(event), method: :get , :class => 'btn btn-outline-danger btn-sm'%>
-        </td>
+        <th scope="col" class="py-3 px-6">Event Name</th>
+        <th scope="col" class="py-3 px-6">Date and Time</th>
+        <th scope="col" class="py-3 px-6">Location</th>
+        <th scope="col" class="py-3 px-6">Remove from List</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+            <%= event.name %>
+          </th>
+          <td class="py-4 px-6">
+            <%= event.datetime %>
+          </td>
+          <td class="py-4 px-6">
+            <%= event.location %>
+          </td>
+          <td class="py-4 px-6">
+            <%= button_to "Remove", remove_event_path(event),  method: :get , :class => 'font-medium text-red-600 dark:text-red-500 hover:underline' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<%= button_to "Back to All Events", events_path, method: :get , :class => 'btn btn-outline-primary'%>
-<p></p>
-<%= button_to "Log Out", root_path, method: :get , :class => 'btn btn-outline-secondary'%>
+<div class="mt-3 inline-flex">
+  <%= button_to "Back to All Events", events_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
+  <%= link_to "Logout", organization_logout_path, :class => "text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"%>
+</div>
