changes to scenarios

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
             <%= @event.datetime %>
             <% end %>
   </li>
-  <li>
+  <li id="location">
     Location:
     <%= @event.location %>
   </li>
