made spec fixes and fixed duplicate events

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="mt-5 md:col-span-2 md:mt-0">
-    <%= form_tag events_path, :class => 'form' do %>
+    <%= form_tag event_path(@event), :method => :put, :class => 'form' do %>
       <div class="overflow-hidden shadow sm:rounded-md">
         <div class="bg-white px-4 py-5 sm:p-6">
           <div class="grid grid-cols-6 gap-6">
