--- a/app/views/students/my_events.html.erb
+++ b/app/views/students/my_events.html.erb
@@ -24,7 +24,7 @@
             <%= event.location %>
           </td>
           <td class="py-4 px-6">
-            <%= button_to "Remove", remove_event_path(event),  method: :get , :class => 'font-medium text-red-600 dark:text-red-500 hover:underline' %>
+            <%= button_to "Remove", remove_event_path(event), id: event.id.to_s, method: :get , :class => 'font-medium text-red-600 dark:text-red-500 hover:underline' %>
           </td>
         </tr>
       <% end %>
