--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,8 @@
 <!--  This file is app/views/events/index.html.erb -->
+<div class="mt-3 inline-flex">
+  <%= button_to "My Profile", student_profile_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
+</div>
+
 <h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900"> All Events </h2>
 
 <div class="mt-2 overflow-x-auto relative shadow-md sm:rounded-lg">
