--- a/app/views/students/edit_schedule.html.erb
+++ b/app/views/students/edit_schedule.html.erb
@@ -27,21 +27,22 @@
         </div>
     <% end %>
 </div>
-
-  <div class="mt-5 md:col-span-2 md:mt-0">
+    
+  <div class="mt-3 md:col-span-2 md:mt-0">
     <%= form_tag update_schedule_path(), :class => 'form' do %>
       <div class="overflow-hidden shadow sm:rounded-md">
         <div class="bg-white px-4 py-5 sm:p-6">
-          <div class="grid grid-cols-6 gap-6">
-            <div class="col-span-6 sm:col-span-3">
-                <%= label :timeblock, :weekday, 'Day', class: 'col-form-label'  %>
-                <%= select :timeblock, :weekday, ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"], {}, {class: 'form-control col-1'} %>
+        <h2 class="text-xl tracking-tight text-gray-900">Add Busy Hours</h2>
+          <div class="mt-3 grid grid-cols-6 gap-6">
+            <div class="col-span-6">
+                <%= label :timeblock, :weekday, 'Day', :class => 'block text-sm font-medium text-gray-700'  %>
+                <%= select :timeblock, :weekday, ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"], {} %>
             </div>
-            <div class="col-span-6 sm:col-span-3">
+            <div class="col-span-6">
               <%= label :timeblock, :busy_start, 'Start time', :class => 'block text-sm font-medium text-gray-700' %>
               <%= time_select :timeblock, :busy_start, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm', :ampm => true %>
             </div>
-            <div class="col-span-6 sm:col-span-3">
+            <div class="col-span-6">
               <%= label :event, :busy_end, 'End time', :class => 'block text-sm font-medium text-gray-700' %>
               <%= time_select :timeblock, :busy_end, :class => 'mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm', :ampm => true %>
             </div>
@@ -49,11 +50,15 @@
           </div>
         </div>
         <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-          <%= submit_tag 'Add Busy Timeblock', :class => 'inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2' %>
+          <%= submit_tag 'Add', :class => 'inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2' %>
       </div>
     <% end %>
   </div>
+  <div class="py-4 px-6">
   <%= link_to 'Done', show_schedule_path(), :class => 'inline-flex justify-center rounded-md border border-transparent bg-blue-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2' %>
-        </div>
+  </div>
+    </div>
 </div>
+<div class="py-4 px-6">
 <%= link_to "Logout", organization_logout_path, 'data-method' => 'post', :class => "text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-6 mr-2 mb-4 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"%>
+</div>
