--- a/app/views/events/student_show.html.erb
+++ b/app/views/events/student_show.html.erb
@@ -1,5 +1,11 @@
 <!--  app/views/events/show.html.erb -->
 
+<div class="mt-3 inline-flex">
+  <%= button_to "My Profile", student_profile_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
+  <%= button_to "All Events", events_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
+  <%= button_to "My Events", student_events_path, method: :get , :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
+</div>
+
 <div class="overflow-hidden bg-white shadow sm:rounded-lg">
   <div class="px-4 py-3 sm:px-6">
     <h2 class="text-lg font-medium leading-6 text-gray-900">Details about <em><%= @event.name %></em></h2>
@@ -41,6 +47,9 @@
 </div>
 
 <div class="mt-3 inline-flex">
-  <%= button_to "Back to All Events", events_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
-  <%= link_to "Logout", organization_logout_path, 'data-method' => 'post', :class => "text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"%>
+  <ul>
+  <li><%= link_to "<- Back to All Events", events_path, method: :get, style: "color: blue"%></li>
+  <br>
+  <li><%= link_to "Logout", organization_logout_path, 'data-method' => 'post', :class => "text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"%></li>
+  </ul>
 </div>
