--- a/app/views/students/my_events.html.erb
+++ b/app/views/students/my_events.html.erb
@@ -6,7 +6,7 @@
   <%= button_to "My Events", student_events_path, method: :get , :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
 </div>
 
-<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Your Events</h2>
+<h2 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">My Events</h2>
 
 <div class="mt-2 overflow-x-auto relative shadow-md sm:rounded-lg">
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400" id="events">
