--- a/app/views/students/show_schedule.html.erb
+++ b/app/views/students/show_schedule.html.erb
@@ -29,9 +29,10 @@
         </div>
     <% end %>
 </div>
-
+<ul class="mt-3">
+    <li><%= link_to "<- Back to Profile", student_profile_path, method: :get, style: "color: blue"%></li>
+</ul>
 <div class="mt-3 inline-flex">
-  <%= button_to "Back to Profile", student_profile_path, method: :get, :class => 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800'%>
   <%= link_to "Edit Schedule", edit_schedule_path, class: "focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" %>
   <%= link_to "Logout", organization_logout_path, 'data-method' => 'post', :class => "text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900" %>
 </div>
